microserv-maintenance/src/main/java/org/example/microservmaintenance/error/exception/NotExistsException.java
package org.example.microservmaintenance.error.exception;

public class NotExistsException extends RuntimeException{

    public NotExistsException(String message) {
        super(message);
    }
}
